# django-metamask-auth

./: README.md  requirements.txt
django-metamask-auth/: LICENSE  MANIFEST.in  README.rst  setup.cfg
django-metamask-auth/metamask_web3_auth/: urls.py  utils.py  views.py
django-metamask-auth/metamask_web3_auth/static/web3auth/js/: web3auth.js
django-metamask-auth/metamask_web3_auth/templates/metamask_web3_auth/: base.html
mysite/: db.sqlite3
mysite/metamask_web3_auth/: apps.py  backend.py  forms.py
mysite/metamask_web3_auth/templates/metamask_web3_auth/: signup.html
mysite/mysite/: settings.py  urls.py
mysite/templates/: base.html  index.html
mysite/templates/metamask_web3_auth/: autologin.html  login.html  signup.html
