[metadata]
name = django-metamask-auth
version = 0.1
description = A Django app to perform login & signup using metamask.
long_description = file: README.rst
url = 
author = Anuj Singh
author_email = underscoreanuj@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0  
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: